@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.6
 
 	- Documentation updates (STR #2646, STR #2647, STR #2649)
+	- cupsEncodeOptions2() did not handle option values like
+	  "What's up, doc?" properly.
 	- Added lots of memory allocation checks (Fortify)
 	- The scheduler would crash if it was unable to add a job
 	  file (Fortify)
